# api/controllers/model.js
@@ -3,7 +3,9 @@
 const { get, putSync } = require('../helpers/db');
 const { generateToken, checkToken } = require('../helpers/token');
 const { getTrackAudioAnalysis, putTrackAudioFeature, putTrackAudioAnalysisForDataset } = require('../controllers/spotify');
+const { getTrackListForChart } = require('../controllers/chart');
 const { getChartDateList, getAudioAnalysisKey, getGenreName, convertDateToString } = require('../helpers/utils');
+
 //const { runData } = require('../helpers/data.js');
 var weka = require('../helpers/weka-lib.js');
 var Arff = require('arff-utils');
@@ -15,6 +17,7 @@ module.exports = {
     saveArffData: saveArffData,
     predict: predict
 };
+
 
 function buildModel(req, res) {
     var startDate = req.swagger.params.startDate.value;
@@ -145,28 +148,6 @@ function putDistinctKeyToObject(object1, object2) {
     return object1;
 }
 
-async function getTrackListForChart(date, genreType) {
-    var chartTracks = new Object;
-    return new Promise((resolve, reject) => {
-        get(`chart.${date}.${genreType}`, async (err, value) => {
-            if (!err) {
-                var trackIds = value.split(";");
-                for (var i = 0; i < trackIds.length; i++) {
-                    var trackId = trackIds[i];
-                    if (trackId == '') {
-                        continue;
-                    }
-                    chartTracks[trackId] = i + 1;
-                }
-                resolve(chartTracks);
-            }
-            else {
-                console.log('Get track list error', date);
-                resolve(undefined);
-            }
-        });
-    });
-}
 
 function saveArffData() {
     var filenameList = [pathArff + 'dance_data.arff',
